all:
	@echo "CXX=$(CXX)" > modules.template
	@echo "CFLAGS=$(CFLAGS)" >> modules.template
	@echo "CXXFLAGS=$(CXXFLAGS)" >> modules.template
	@echo "LDFLAGS=$(LDFLAGS)" >> modules.template
	@echo "XML_CFLAGS=$(XML_CFLAGS)" >> modules.template
	@echo "PTHREAD_LIB=$(PTHREAD_LIB)" >> modules.template
	@echo "AM_CPPFLAGS=$(AM_CPPFLAGS)" >> modules.template
	@echo "CPPFLAGS=$(CPPFLAGS)" >> modules.template
	@echo "AM_CXXFLAGS=$(AM_CXXFLAGS)" >> modules.template
	@echo "IDN_LIB=$(IDN_LIB)" >> modules.template
	@echo "XNET_LIB=$(XNET_LIB)" >> modules.template
	@echo "DL_LIB=$(DL_LIB)" >> modules.template
	@echo "OPENSSL_LIB=$(OPENSSL_LIB)" >> modules.template
	@echo "ZLIB_LIB=$(ZLIB_LIB)" >> modules.template
	@echo "XML_LIBS=$(XML_LIBS)" >> modules.template
	@echo "LIBPNG_LIBS=$(LIBPNG_LIBS)" >> modules.template
	@echo "LIBPNG_CFLAGS=$(LIBPNG_CFLAGS)" >> modules.template
	@echo "MYSERVER_HEADERS=$(MYSERVER_HEADERS)" >> modules.template


