SUBDIRS = images

myserverdatadir = $(root_prefix)/var/web/documentation

dist_myserverdata_DATA = Background.html browsefolder.html perl.html \
CGI.html cvsversion.html php.html PublishWebSite.html errorfiles.html \
runWindows9x.html FastCGI.html Security.html helpus.html services.html \
HTTP.html TableOfContents.html virtualhosts.html HTTPS.html \
UserManual.html license.html webserver.html Htmlfiles.html ViewingSite.html \
mimetypes.html ISAPI.html WinCGI.html myserver.css Linuxrun.html \
basicServer.html performance.html

