SUBDIRS = images

myserverdatadir = $(root_prefix)/var/web/documentation

dist_myserverdata_DATA = background.htm basicserver.htm browsefolder.htm \
cgi.htm cvsversion.htm errorfiles.htm fastcgi.htm helpus.htm \
htmlfiles.htm http.htm https.htm index.htm isapi.htm license.htm \
linuxrun.htm mimetypes.htm myserver.css performance.htm perl.htm php.htm \
publishwebsite.htm remotecontrol.htm runwindows9x.htm security.htm \
services.htm tableofcontents.htm viewingsite.htm virtualhosts.htm \
webserver.htm wincgi.htm
