# GNU MyServer
#
# Copyright (C) 2002-2010 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
myserverdatadir = $(datadir)/myserver/system/errors

dist_myserverdata_DATA = 300.html 301.html 302.html 303.html \
304.html 305.html 307.html 400.html 401.html 402.html 403.html \
404.html 405.html 406.html 407.html 408.html 409.html 410.html \
411.html 412.html 413.html 414.html 415.html 416.html 417.html \
500.html 501.html 502.html 503.html 504.html 505.html