myserverdatadir = $(root_prefix)/var/web/documentation/texts

dist_myserverdata_DATA = advancedconfig.htm background.htm basicserver.htm \
browsefolder.htm cgi.htm errorfiles.htm fastcgi.htm helpus.htm htmlfiles.htm \
http.htm https.htm isapi.htm license.htm linuxrun.htm mimetypes.htm \
performance.htm perl.htm php.htm processsecurity.htm publishwebsite.htm \
remotecontrol.htm runwindows9x.htm scgi.htm security.htm services.htm \
svnversion.htm tableofcontents.htm viewingsite.htm virtualhosts.htm \
webserver.htm wincgi.htm
