# GNU MyServer
#
# Copyright (C) 2002-2010 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
streamincludedir=$(includedir)/myserver/include/log/stream
streaminclude_HEADERS = console_stream_creator.h console_stream.h file_stream_creator.h file_stream.h log_stream_creator.h log_stream_factory.h log_stream.h socket_stream_creator.h socket_stream.h
SUBDIRS =

