httpincludedir=$(includedir)/myserver/include/protocol/http
httpinclude_HEADERS = dyn_http_command.h dyn_http_command_manager.h dyn_http_manager.h dyn_http_manager_list.h http_data_handler.h http_data_read.h http_errors.h http.h http_header.h http_headers.h http_request.h http_req_security_domain.h http_response.h http_thread_context.h
SUBDIRS = env

