# GNU MyServer
#
# Copyright (C) 2002-2010 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
includedir=@includedir@/myserver/include/protocol/http
include_HEADERS = dyn_http_command.h dyn_http_command_manager.h \
	dyn_http_manager.h dyn_http_manager_list.h http_data_handler.h \
	http_data_read.h http_errors.h http.h http_header.h http_headers.h \
	http_internal_exception.h http_request.h http_req_security_domain.h	\
	http_response.h http_thread_context.h
SUBDIRS = env webdav

